--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -5,15 +5,17 @@
         </div>
         <div class="search__from">
             <p>Skąd:</p>
-            <mat-checkbox class="example-margin">Warszawa</mat-checkbox>
-            <mat-checkbox class="example-margin">Kraków</mat-checkbox>
-            <mat-checkbox class="example-margin">Gdańsk</mat-checkbox>
+            <div class="search__from_places">
+                <mat-checkbox class="search__place">Warszawa</mat-checkbox>
+                <mat-checkbox class="search__place">Kraków</mat-checkbox>
+                <mat-checkbox class="search__place">Gdańsk</mat-checkbox>
+            </div>
         </div>
         <div class="search__destination">
             <p>Dokąd:</p>
-            <mat-checkbox class="example-margin">Londyn</mat-checkbox>
-            <mat-checkbox class="example-margin">Berlin</mat-checkbox>
-            <mat-checkbox class="example-margin">Madryt</mat-checkbox>
+            <mat-checkbox class="search__place">Londyn</mat-checkbox>
+            <mat-checkbox class="search__place">Berlin</mat-checkbox>
+            <mat-checkbox class="search__place">Madryt</mat-checkbox>
         </div>
         <div class="search__when">
             <p>Kiedy:</p>
@@ -36,16 +38,19 @@
                 </mat-form-field>
             </form>              
         </div>
-        <mat-chip-listbox multiple>
+        <mat-chip-listbox multiple class="search__options">
             <mat-chip-option>
-                jeden
+                All-inclusive
             </mat-chip-option>
             <mat-chip-option>
-                dwa
+                Last minute
             </mat-chip-option>
             <mat-chip-option>
-                trzy
+                City Break
             </mat-chip-option>
         </mat-chip-listbox>
+        <div class="search__button">
+            <button mat-raised-button color="primary">Szukaj</button>
+        </div>
     </div>
 </div>
