--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,6 @@ body { margin: 0; font-family: 'Roboto', "Helvetica Neue", sans-serif; }
     --color-olive-green: #8D8741;
     --color-light-yellow: #FBEEC1;
 }
+.mdc-evolution-chip-set__chips {
+    margin-left: 0!important;
+}
