Created and added vacation card component to search component, changed scrollbar

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -53,4 +53,7 @@
             <button mat-raised-button color="primary">Szukaj</button>
         </div>
     </div>
+    <div class="search__cards">
+        <app-vacation-card [width]="'300px'" [img]="'url(assets/Madrid.jpg)'"></app-vacation-card>
+    </div>
 </div>
