--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -1,14 +1,12 @@
 .search {
-    width: 100%;
-    height: 100%;
     background-color: aliceblue;
     padding-top: 25px;
     padding-left: 25px;
+    display: flex;
     p {
         font-weight: 500;
     }
     &__container {
-        margin: 25px 0 0 25px;
         padding: 20px;
         background-color: white;
         max-width: 330px;
