Created and added vacation card component to search component, changed scrollbar

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -54,6 +54,9 @@
         </div>
     </div>
     <div class="search__cards">
-        <app-vacation-card [width]="'300px'" [img]="'url(assets/Madrid.jpg)'"></app-vacation-card>
+        <app-vacation-card [width]="'300px'" [img]="'/assets/Madrid.jpg'" [title]="'Madryt'" [subtitle]="'Hiszpania'"></app-vacation-card>
+        <app-vacation-card [width]="'300px'" [img]="'/assets/Madrid.jpg'" [title]="'Madryt'" [subtitle]="'Hiszpania'"></app-vacation-card>
+        <app-vacation-card [width]="'300px'" [img]="'/assets/Madrid.jpg'" [title]="'Madryt'" [subtitle]="'Hiszpania'"></app-vacation-card>
+        <app-vacation-card [width]="'300px'" [img]="'/assets/Madrid.jpg'" [title]="'Madryt'" [subtitle]="'Hiszpania'"></app-vacation-card>
     </div>
 </div>
