--- a/src/app/vacation-card/vacation-card.component.scss
+++ b/src/app/vacation-card/vacation-card.component.scss
@@ -1,4 +1,7 @@
   .example-header-image {
-    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+    background-image: url('/assets/Madrid.jpg');
     background-size: cover;
   }
+  .mat-mdc-card-content {
+    padding: 16px;
+}
