--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,15 @@ body { margin: 0; font-family: 'Roboto', "Helvetica Neue", sans-serif; }
 .mdc-evolution-chip-set__chips {
     margin-left: 0!important;
 }
+
+body::-webkit-scrollbar {
+    width: 0.5em;
+}
+ 
+body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+}
