Minor changes in card description, changed width for checkboxes, added images to assets folder

--- a/src/app/vacation-card/vacation-card.component.scss
+++ b/src/app/vacation-card/vacation-card.component.scss
@@ -2,6 +2,9 @@
     background-image: url('/assets/Madrid.jpg');
     background-size: cover;
   }
+  img {
+    max-height: 200px;
+  }
   .mat-mdc-card-content {
     padding: 16px;
 }
