--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -9,12 +9,15 @@
                 <mat-checkbox class="search__place">Warszawa</mat-checkbox>
                 <mat-checkbox class="search__place">Kraków</mat-checkbox>
                 <mat-checkbox class="search__place">Gdańsk</mat-checkbox>
+                <mat-checkbox class="search__place">Wrocław</mat-checkbox>
             </div>
         </div>
         <div class="search__destination">
             <p>Dokąd:</p>
             <mat-checkbox class="search__place">Londyn</mat-checkbox>
+            <mat-checkbox class="search__place">Malediwy</mat-checkbox>
             <mat-checkbox class="search__place">Berlin</mat-checkbox>
+            <mat-checkbox class="search__place">Bali</mat-checkbox>
             <mat-checkbox class="search__place">Madryt</mat-checkbox>
         </div>
         <div class="search__when">
@@ -54,9 +57,10 @@
         </div>
     </div>
     <div class="search__cards">
-        <app-vacation-card [width]="'300px'" [img]="'/assets/Madrid.jpg'" [title]="'Madryt'" [subtitle]="'Hiszpania'"></app-vacation-card>
-        <app-vacation-card [width]="'300px'" [img]="'/assets/Madrid.jpg'" [title]="'Madryt'" [subtitle]="'Hiszpania'"></app-vacation-card>
-        <app-vacation-card [width]="'300px'" [img]="'/assets/Madrid.jpg'" [title]="'Madryt'" [subtitle]="'Hiszpania'"></app-vacation-card>
-        <app-vacation-card [width]="'300px'" [img]="'/assets/Madrid.jpg'" [title]="'Madryt'" [subtitle]="'Hiszpania'"></app-vacation-card>
+        <app-vacation-card [width]="'300px'" [img]="'/assets/Londyn.jpeg'" [title]="'Londyn'" [subtitle]="'Anglia'" [cost]="'2000'"></app-vacation-card>
+        <app-vacation-card [width]="'300px'" [img]="'/assets/Malediwy.jpg'" [title]="'Malediwy'" [cost]="'8000'"></app-vacation-card>
+        <app-vacation-card [width]="'300px'" [img]="'/assets/Berlin.jpg'" [title]="'Berlin'" [subtitle]="'Niemcy'" [cost]="'1500'"></app-vacation-card>
+        <app-vacation-card [width]="'300px'" [img]="'/assets/Bali.jpg'" [title]="'Bali'" [subtitle]="'Indonezja'" [cost]="'7000'"></app-vacation-card>
+        <app-vacation-card [width]="'300px'" [img]="'/assets/Madrid.jpg'" [title]="'Madryt'" [subtitle]="'Hiszpania'" [cost]="'2500'"></app-vacation-card>
     </div>
 </div>
