--- a/src/app/vacation-card/vacation-card.component.html
+++ b/src/app/vacation-card/vacation-card.component.html
@@ -7,9 +7,9 @@
     <img mat-card-image [src]="img" alt="Photo of Madrid landscape">
     <mat-card-content>
       <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
+        Wycieczka do: {{title}}
+        W terminie:
+        Kosztuje: {{cost}}
       </p>
     </mat-card-content>
     <mat-card-actions>
