--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
   <mat-toolbar class="header__toolbar" color="primary">
     <mat-toolbar-row class="header__toolbar_row">
       <div class="header__toolbar_logo">
-        <a href="#">
+        <a routerLink="/">
           <img src="/assets/Odkryj.png" alt="logo odkryj-podróże" />
         </a>
       </div>
@@ -18,6 +18,7 @@
         mat-icon-button
         class="example-icon"
         aria-label="Example icon-button with menu icon"
+        [routerLink]="'users'"
       >
         <mat-icon>person</mat-icon>
       </button>
