--- a/src/app/vacation-card/vacation-card.component.html
+++ b/src/app/vacation-card/vacation-card.component.html
@@ -2,7 +2,7 @@
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
       <mat-card-title>{{ title }}</mat-card-title>
-      <mat-card-subtitle>{{ subtitle }}</mat-card-subtitle>
+      <mat-card-subtitle>{{ country }}</mat-card-subtitle>
     </mat-card-header>
     <img mat-card-image [src]="img" alt="Photo of Madrid landscape">
     <mat-card-content>
