Created login component and styles for it

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,21 @@
-<p>Works</p>
+<div class="login">
+  <div class="login__container">
+    <h2>Zaloguj się</h2>
+    <form class="login__container_example-form">
+      <p>Email</p>
+      <mat-form-field class="example-full-width">
+        <mat-label>Email</mat-label>
+        <input matInput placeholder="Wpisz swój email" />
+      </mat-form-field>
+      <p>Hasło</p>
+      <mat-form-field class="example-full-width">
+        <mat-label>Hasło</mat-label>
+        <input matInput placeholder="Wpisz swoje hasło" />
+      </mat-form-field>
+    </form>
+    <button mat-raised-button color="primary" class="login__container_button">Zaloguj się</button>
+    <div class="login__container_register">
+        <p>Nie masz jeszcze konta? <a href="#">Zarejestruj się</a></p>
+    </div>
+  </div>
+</div>
