Added cost filtering

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,7 +15,7 @@
     </form>
     <button mat-raised-button color="primary" class="login__container_button">Zaloguj się</button>
     <div class="login__container_register">
-        <p>Nie masz jeszcze konta? <a href="#">Zarejestruj się</a></p>
+        <p>Nie masz jeszcze konta? <a routerLink="/register">Zarejestruj się</a></p>
     </div>
   </div>
 </div>
