Added date to filtering

--- a/src/app/vacation-card/vacation-card.component.html
+++ b/src/app/vacation-card/vacation-card.component.html
@@ -10,7 +10,7 @@
         Wycieczka do: {{title}}
       </p>
       <p>
-        W terminie:
+        W terminie: {{ startDate }} do {{ endDate }}
       </p>
       <p>
         Kosztuje: {{cost}}
