--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -43,7 +43,7 @@
     <div class="search__cards">
         <app-vacation-card 
         *ngFor="let trip of displayedTrips"
-        [width]="'300px'" [img]="trip.url " [title]="trip.title" [country]="trip.country" [cost]="trip.cost"></app-vacation-card>
+        [width]="'300px'" [img]="trip.url " [title]="trip.title" [country]="trip.country" [cost]="trip.cost" [startDate]="trip.startDate" [endDate]="trip.endDate"></app-vacation-card>
         <div class="search__paginator">
         <mat-paginator #paginator
             [length]="this.filteredTrips.length"
