--- a/src/app/vacation-card/vacation-card.component.html
+++ b/src/app/vacation-card/vacation-card.component.html
@@ -13,7 +13,7 @@
         W terminie: {{ startDate }} do {{ endDate }}
       </p>
       <p>
-        Kosztuje: {{cost}}
+        Koszt: {{cost}}
       </p>
     </mat-card-content>
     <mat-card-actions>
