--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,7 +26,7 @@
       <mat-menu #menu="matMenu">
         <button mat-menu-item [routerLink]="'users'">Zaloguj się </button>
         <button mat-menu-item [routerLink]="'register'">Zarejestruj się</button>
-        <button mat-menu-item>Panel użytkownika</button>
+        <button mat-menu-item [routerLink]="'user-panel'">Panel użytkownika</button>
       </mat-menu>
     </mat-toolbar-row>
   </mat-toolbar>
