--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -1,6 +1,6 @@
 .search {
   background-color: aliceblue;
-  padding: 25px 25px 0 25px;
+  padding: 25px;
   display: flex;
   p {
     font-weight: 500;
