--- a/src/app/vacation-card/vacation-card.component.html
+++ b/src/app/vacation-card/vacation-card.component.html
@@ -17,6 +17,6 @@
       </p>
     </mat-card-content>
     <mat-card-actions>
-        <button mat-raised-button color="primary" (click)="reserveCard(vacationCard)">ZAREZERWUJ</button>
+        <button mat-raised-button color="primary" (click)="emitButtonClick()">ZAREZERWUJ</button>
     </mat-card-actions>
 </mat-card>
