--- a/src/app/user-panel/user-panel.component.html
+++ b/src/app/user-panel/user-panel.component.html
@@ -3,11 +3,10 @@
         <div class="user-panel__title">
             <h2>MOJE REZERWACJE</h2>
         </div>
-        <div class="user-panel__reservations">
-            <ul class="user-panel__trips">
-                <li *ngFor="let card of reservedVacationCards"> {{ card }} </li>
-            </ul>
+        <div class="user-panel__reservations" *ngIf="selectedTrips">
+            <app-vacation-card 
+            *ngFor="let trip of selectedTrips"
+            [width]="'300px'" [img]="trip.url " [title]="trip.title" [country]="trip.country" [cost]="trip.cost" [startDate]="trip.startDate" [endDate]="trip.endDate"></app-vacation-card>
         </div>
     </div>
 </div>
-<app-vacation-card *ngIf="reservedVacationCards.length === 0" (reserveCard)="onReserveClicked($event)"></app-vacation-card>
