--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,6 +1,6 @@
 .footer {
   &__toolbar {
-    padding: 15px 10px;
+    padding: 5px 10px;
     &_logo {
       a {
         display: flex;
@@ -14,15 +14,29 @@
     display: flex;
     align-items: center;
     gap: 10px;
-    a, mat-icon {
-        text-decoration: none;
-        color: white;
-        transition: color .3s;
+    a,
+    mat-icon {
+      text-decoration: none;
+      color: white;
+      transition: color 0.3s;
     }
     &:hover {
-        a, mat-icon {
-            color: rgb(154, 208, 255);
-        }
+      a,
+      mat-icon {
+        color: rgb(154, 208, 255);
+      }
+    }
+  }
+  @media (max-width: 767px) {
+    &__toolbar {
+      padding: 10px;
+      &_logo {
+        margin-bottom: 20px;
+      }
+    }
+    .mat-toolbar-row {
+      height: auto;
+      flex-direction: column;
     }
   }
 }
