Added Cart component

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,6 +23,14 @@
       >
         <mat-icon>person</mat-icon>
       </button>
+      <button
+        mat-icon-button
+        class="example-icon"
+        aria-label="Example icon-button with menu icon"
+        [routerLink]="'cart'"
+      >
+        <mat-icon>shopping_cart</mat-icon>
+      </button>
       <mat-menu #menu="matMenu">
         <button mat-menu-item [routerLink]="'users'">Zaloguj się </button>
         <button mat-menu-item [routerLink]="'register'">Zarejestruj się</button>
