--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -12,9 +12,9 @@
         <mat-label>Nazwisko</mat-label>
         <input matInput placeholder="Wpisz swoje nazwisko" />
       </mat-form-field>
-      <p>Email</p>
+      <p>E-mail</p>
       <mat-form-field class="example-full-width">
-        <mat-label>Email</mat-label>
+        <mat-label>E-mail</mat-label>
         <input matInput placeholder="Wpisz swój email" />
       </mat-form-field>
       <p>Hasło</p>
