--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,9 +2,9 @@
   <div class="login__container">
     <h2>Zaloguj się</h2>
     <form class="login__container_example-form">
-      <p>Email</p>
+      <p>E-mail</p>
       <mat-form-field class="example-full-width">
-        <mat-label>Email</mat-label>
+        <mat-label>E-mail</mat-label>
         <input matInput placeholder="Wpisz swój email" />
       </mat-form-field>
       <p>Hasło</p>
